shifted the animation to the correct file

--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -199,3 +199,72 @@
     transform: translateY(0px);
   }
 }
+
+// videos
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.video{
+animation: appear 0.6s ease-in;
+max-width: 1200px;
+margin: 0 auto;
+line-height: 1.7;
+font-family: "Sora", sans-serif;
+}
+
+// video card items
+
+.cards_item {
+  display: flex;
+  padding: 1rem;
+  transition: all 0.5s ease;
+  &:hover {
+    box-shadow: none;
+    transform: translateY(15px);
+  }
+}
+
+// news
+.news-change-wrapper{
+  animation: appear 0.4s ease-in;
+}
+
+.buttonText {
+  transition: all 0.3s ease;
+
+  &:hover {
+    box-shadow: none;
+    transform: translateY(5px);
+  }
+}
+
+// quiz
+
+.quiz-wrapper {
+  animation: appear 0.2s ease-in;
+  line-height: 1.7;
+  font-family: "Sora", sans-serif;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  justify-content: space-between;
+  font-size: $variable-font;
+}
+
+.quizBtn {
+  transition: all 0.35s ease;
+
+  &:hover {
+    box-shadow: none;
+    transform: translateY(10px);
+  }
+}
